Removes principalName param from methods to use AuthService and UserProfile object.